[package]
name = "avalanche_tetris"
version = "0.2.0"
authors = ["Shaik Azhar Madar <azarmadr@pm.me>"]
edition = "2021"

[features]
default = []
debug = ["bevy-inspector-egui", "menu-plugin/debug"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
menu-plugin = {git = "https://github.com/azarmadr/bevy-ui-menu-plugin.git"}
serde = "1.0"
rand = "0.8"
strum = "0.24"
strum_macros = "0.24"
autodefault = "2.0.0"
duplicate = "0.4"
enum_dispatch = "0.3"
bevy_tweening = "0.5"

[dependencies.bevy-inspector-egui]
version = "0.12"
optional = true

[dependencies.bevy]
version = "0.8"
default-features = false

features = ["render", "bevy_winit", "png", "vorbis", "bevy_audio"]


# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.8"
default-features = false
features = ["x11"]

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"


# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1


[package.metadata.android]
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
assets = "assets"
resources = "assets/res"

[package.metadata.android.sdk]
target_sdk_version = 29
min_sdk_version = 16

[package.metadata.android.application]
debuggable = true
icon = "@mipmap/icon"

[package.metadata.android.application.activity]
orientation = "portrait"

